Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.13.0-beta1, Qt Creator 7.0.2
-
Fix Version/s: Qt Creator 8.0.0-beta2
-
Component/s: iOS Support
-
Labels:
-
Environment:macOS host
-
Platform/s:
-
Commits:e3fd840f98 (qt-creator/qt-creator/8.0) e3fd840f98 (qt-creator/qt-creator/master) e3fd840f98 (qt-creator/tqtc-qt-creator/8.0)
Description
With iOS development, Qt Creator's "Deploy" step takes considerably more time (2:35min with 4.13 beta1) than Xcode's "Installing" step (1:30min, same xcodeproj file, the .app is 1.3GB).
This phenomena can be seen by new devices such as
- iPad Pro 3rd gen 12.9"
- iPhone X, iPhone XS, iPhone 11 Pro Max
Both running iOS 13.6.
This doesn't happen with an older device e.g. iPad Pro 1st gen 12.9".
Attachments
Issue Links
- relates to
-
QTCREATORBUG-21682 When debugging on an iOS device it can take at least a minute to connect to the device if it manages to connect at all
-
- Closed
-